--- a/app/src/main/res/layout-land/activity_recuperar.xml
+++ b/app/src/main/res/layout-land/activity_recuperar.xml
@@ -6,12 +6,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:fillViewport="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/main"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="#2F5596"
         tools:context=".RecuperarActivity">
 
