--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,17 +8,17 @@
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#2F5596"
-        android:id="@+id/Home"
-        tools:context=".inicio">
+        tools:context=".HomeActivity">
 
         <View
             android:id="@+id/viewRectanguloRegistro"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="250dp"
+            android:layout_marginTop="100dp"
             android:background="@drawable/rounded_rectangle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -31,112 +31,49 @@
             android:id="@+id/Planpro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginStart="62dp"
+            android:layout_marginTop="23dp"
+            android:fontFamily="@font/jsmath_cmti10"
             android:text="@string/planpro"
             android:textColor="@color/white"
             android:textSize="25sp"
-            android:fontFamily="@font/jsmath_cmti10"
-            app:layout_constraintBottom_toBottomOf="@+id/View2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.225"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.003" />
-
-
-        <TextView
-            android:id="@+id/MENU"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/menu"
-            android:textColor="@color/black_osc"
-            android:textSize="25sp"
-            android:textStyle="italic"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.483"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/View2"
-            app:layout_constraintVertical_bias="0.049" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageViewListaagregar1"
-            android:layout_width="112dp"
-            android:layout_height="116dp"
-            android:layout_marginTop="224dp"
-            android:layout_marginEnd="248dp"
-            android:contentDescription="@string/todo"
+            android:id="@+id/imageViewLogoHome"
+            android:layout_width="47dp"
+            android:layout_height="47dp"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="13dp"
+            android:contentDescription="@string/Logo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/bloc_notes_2__1_" />
+
+        <ImageButton
+            android:id="@+id/imageButtonSalirHome"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="13dp"
+            android:layout_marginEnd="70dp"
+            android:contentDescription="@string/salir"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@mipmap/agregar_notas" />
+            app:srcCompat="@drawable/salir_1"
+            android:background="@null" />
 
-        <ImageView
-            android:id="@+id/imageViewListanotas2"
-            android:layout_width="108dp"
-            android:layout_height="107dp"
-            android:layout_marginTop="224dp"
-            android:layout_marginEnd="60dp"
-            android:contentDescription="@string/todo"
+        <ImageButton
+            android:id="@+id/imageButtonUsuarioHome"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="13dp"
+            android:layout_marginEnd="13dp"
+            android:background="@null"
+            android:contentDescription="@string/editarusuario"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@mipmap/lista_de_notas" />
-
-        <Button
-            android:id="@+id/buttonagregarnotas"
-            android:layout_width="116dp"
-            android:layout_height="48dp"
-            android:background="@drawable/button_rec"
-            android:backgroundTint="#5278A0"
-            android:text="@string/Agregar"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/imageViewRetosinicio"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.119"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewListaagregar1"
-            app:layout_constraintVertical_bias="0.2" />
-
-        <Button
-            android:id="@+id/buttonMisnotas"
-            android:layout_width="116dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/button_rec"
-            android:backgroundTint="#5278A0"
-            android:text="@string/Agregar"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.783"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewListanotas2"
-            app:layout_constraintVertical_bias="0.002" />
-
-        <ImageView
-            android:id="@+id/imageViewRetosinicio"
-            android:layout_width="108dp"
-            android:layout_height="107dp"
-            android:layout_marginTop="416dp"
-            android:layout_marginEnd="248dp"
-            android:contentDescription="@string/todo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@mipmap/retos" />
-
-        <Button
-            android:id="@+id/buttonhabitos1"
-            android:layout_width="116dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="8dp"
-            android:backgroundTint="#2F5596"
-            android:text="@string/habitos"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.119"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewRetosinicio"
-            app:layout_constraintVertical_bias="0.004" />
+            app:srcCompat="@drawable/usuario_1" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
