--- a/app/src/main/res/layout-land/activity_agregar_notas.xml
+++ b/app/src/main/res/layout-land/activity_agregar_notas.xml
@@ -43,7 +43,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
-            android:id="@+id/imageViewAtrasHome"
+            android:id="@+id/ButtonAtrasHome1"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_marginTop="20dp"
@@ -65,7 +65,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.124"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewAtrasHome" />
+            app:layout_constraintTop_toBottomOf="@+id/ButtonAtrasHome1" />
 
         <TextView
             android:id="@+id/FechaRegistro"
@@ -107,56 +107,28 @@
 
 
         <ImageView
-            android:id="@+id/LogodeIa"
-            android:layout_width="54dp"
-            android:layout_height="58dp"
-            android:layout_marginStart="88dp"
-            android:layout_marginTop="16dp"
-            android:contentDescription="@string/logo_ia_modulo_agregar_notas"
-            android:src="@drawable/simbolo_ia_1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/DescripcionNota" />
-
-        <EditText
-            android:id="@+id/TextoIA"
-            android:layout_width="500dp"
-            android:layout_height="58dp"
-            android:layout_marginTop="16dp"
-            android:background="@color/white"
-            android:hint="@string/resumen_por_ia"
-            android:paddingStart="10dp"
-            android:textSize="15sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/LogodeIa"
-            app:layout_constraintTop_toBottomOf="@+id/DescripcionNota"
-            tools:ignore="RtlSymmetry" />
-
-        <ImageView
             android:id="@+id/CalendarioAgregarNotas"
             android:layout_width="79dp"
             android:layout_height="74dp"
-            android:layout_marginStart="88dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="84dp"
+            android:layout_marginBottom="64dp"
             android:contentDescription="@string/calendario_fecha_finalizacion_nota"
             android:src="@drawable/calendario_1"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/TextoIA"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/FechaFinalizacion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="56dp"
             android:text="@string/fecha_de_finalizaciontexto"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.02"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/CalendarioAgregarNotas"
-            app:layout_constraintTop_toBottomOf="@+id/TextoIA" />
+            app:layout_constraintTop_toBottomOf="@+id/DescripcionNota" />
 
         <Button
             android:id="@+id/buttonAgregarNota"
