--- a/app/src/main/res/layout/activity_agregar_notas.xml
+++ b/app/src/main/res/layout/activity_agregar_notas.xml
@@ -43,7 +43,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
-            android:id="@+id/imageViewAtrasHome"
+            android:id="@+id/ButtonAtrasHome1"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_marginTop="16dp"
@@ -65,7 +65,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.156"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewAtrasHome" />
+            app:layout_constraintTop_toBottomOf="@+id/ButtonAtrasHome1" />
 
         <TextView
             android:id="@+id/FechaRegistro"
@@ -107,54 +107,30 @@
 
 
         <ImageView
-            android:id="@+id/LogodeIa"
-            android:layout_width="54dp"
-            android:layout_height="58dp"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="16dp"
-            android:contentDescription="@string/logo_ia_modulo_agregar_notas"
-            android:src="@drawable/simbolo_ia_1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/DescripcionNota" />
-
-        <EditText
-            android:id="@+id/TextoIA"
-            android:layout_width="300dp"
-            android:layout_height="58dp"
-            android:layout_marginTop="16dp"
-            android:background="@color/white"
-            android:hint="@string/resumen_por_ia"
-            android:textSize="15sp"
-            android:paddingStart="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.111"
-            app:layout_constraintStart_toEndOf="@+id/LogodeIa"
-            app:layout_constraintTop_toBottomOf="@+id/DescripcionNota"
-            tools:ignore="RtlSymmetry" />
-
-        <ImageView
             android:id="@+id/CalendarioAgregarNotas"
             android:layout_width="79dp"
             android:layout_height="74dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="104dp"
             android:contentDescription="@string/calendario_fecha_finalizacion_nota"
             android:src="@drawable/calendario_1"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/TextoIA" />
+            app:layout_constraintTop_toBottomOf="@+id/DescripcionNota"
+            app:layout_constraintVertical_bias="0.892" />
 
         <TextView
             android:id="@+id/FechaFinalizacion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="76dp"
             android:text="@string/fecha_de_finalizaciontexto"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.053"
+            app:layout_constraintHorizontal_bias="0.004"
             app:layout_constraintStart_toEndOf="@+id/CalendarioAgregarNotas"
-            app:layout_constraintTop_toBottomOf="@+id/TextoIA" />
+            app:layout_constraintTop_toBottomOf="@+id/DescripcionNota" />
 
         <Button
             android:id="@+id/buttonAgregarNota"
@@ -169,7 +145,7 @@
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/FechaFinalizacion"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.458" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
