--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,7 +18,7 @@
             android:id="@+id/viewRectanguloHome"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="100dp"
             android:background="@drawable/rounded_rectangle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,7 @@
             app:layout_constraintVertical_bias="0.666" />
 
         <ImageView
-            android:id="@+id/imageViewListaagregar1"
+            android:id="@+id/AgregarNotas1"
             android:layout_width="100dp"
             android:layout_height="114dp"
             android:layout_marginStart="60dp"
@@ -72,7 +72,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageViewListanotas2"
+            android:id="@+id/Listanotas2"
             android:layout_width="100dp"
             android:layout_height="114dp"
             android:layout_marginTop="188dp"
@@ -81,7 +81,7 @@
             android:src="@drawable/lista_de_notas_1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.854"
-            app:layout_constraintStart_toEndOf="@+id/imageViewListaagregar1"
+            app:layout_constraintStart_toEndOf="@+id/AgregarNotas1"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
@@ -92,11 +92,11 @@
             android:backgroundTint="#2F5596"
             android:text="@string/Agregar"
             android:textSize="15sp"
-            app:layout_constraintBottom_toTopOf="@+id/imageViewRetosinicio"
+            app:layout_constraintBottom_toTopOf="@+id/Habitos1"
             app:layout_constraintEnd_toStartOf="@+id/buttonMisnotas"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewListaagregar1"
+            app:layout_constraintTop_toBottomOf="@+id/AgregarNotas1"
             app:layout_constraintVertical_bias="0.016" />
 
         <Button
@@ -113,11 +113,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/viewRectanguloHome"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewListanotas2"
+            app:layout_constraintTop_toBottomOf="@+id/Listanotas2"
             app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
-            android:id="@+id/imageViewRetosinicio"
+            android:id="@+id/Habitos1"
             android:layout_width="100dp"
             android:layout_height="114dp"
             android:layout_marginTop="412dp"
@@ -140,7 +140,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.153"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewRetosinicio"
+            app:layout_constraintTop_toBottomOf="@+id/Habitos1"
             app:layout_constraintVertical_bias="0.0" />
 
 
