--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -60,11 +60,11 @@
             android:layout_height="48dp"
             android:layout_marginTop="13dp"
             android:layout_marginEnd="70dp"
+            android:background="@null"
             android:contentDescription="@string/salir"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/salir_1"
-            android:background="@null" />
+            app:srcCompat="@drawable/salir_1" />
 
         <ImageButton
             android:id="@+id/imageButtonUsuarioHome"
@@ -93,86 +93,83 @@
 
         <ImageView
             android:id="@+id/AgregarNotas1"
-            android:layout_width="100dp"
+            android:layout_width="120dp"
             android:layout_height="114dp"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="188dp"
+            android:layout_marginTop="15dp"
             android:contentDescription="@string/logo_de_modulo_agregar_notas"
             android:src="@drawable/agregar_notas_2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.20"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/MENU" />
 
         <ImageView
             android:id="@+id/Listanotas2"
-            android:layout_width="100dp"
+            android:layout_width="120dp"
             android:layout_height="114dp"
-            android:layout_marginTop="188dp"
-            android:layout_marginEnd="55dp"
+            android:layout_marginTop="15dp"
             android:contentDescription="@string/logo_de_modulo_lista_de_notas"
             android:src="@drawable/lista_de_notas_1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.854"
-            app:layout_constraintStart_toEndOf="@+id/AgregarNotas1"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintHorizontal_bias="0.80"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/MENU"
+            tools:layout_editor_absoluteY="188dp" />
 
         <Button
             android:id="@+id/buttonagregarnotas"
-            android:layout_width="118dp"
+            android:layout_width="120dp"
             android:layout_height="52dp"
-            android:layout_marginStart="55dp"
+            android:layout_marginTop="4dp"
             android:backgroundTint="#2F5596"
             android:text="@string/Agregar"
+            android:textColor="#FFFFFF"
             android:textSize="15sp"
-            app:layout_constraintBottom_toTopOf="@+id/Habitos1"
-            app:layout_constraintEnd_toStartOf="@+id/buttonMisnotas"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/AgregarNotas1"
-            app:layout_constraintVertical_bias="0.016" />
+            app:layout_constraintTop_toBottomOf="@+id/AgregarNotas1" />
 
         <Button
             android:id="@+id/buttonMisnotas"
-            android:layout_width="118dp"
+            android:layout_width="120dp"
             android:layout_height="52dp"
-            android:layout_marginStart="238dp"
-            android:layout_marginEnd="55dp"
-            android:layout_marginBottom="376dp"
+            android:layout_marginTop="4dp"
             android:backgroundTint="#2F5596"
             android:text="@string/mis_notas"
+            android:textColor="#FFFFFF"
             android:textSize="15sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/viewRectanguloHome"
-            app:layout_constraintTop_toBottomOf="@+id/Listanotas2"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintHorizontal_bias="0.80"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="302dp"
+            app:layout_constraintTop_toBottomOf="@+id/Listanotas2"/>
 
         <ImageView
             android:id="@+id/Habitos1"
-            android:layout_width="100dp"
+            android:layout_width="120dp"
             android:layout_height="114dp"
-            android:layout_marginTop="412dp"
+            android:layout_marginTop="100dp"
             android:contentDescription="@string/logo_de_modulo_retos"
             android:src="@drawable/retos_1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.176"
+            app:layout_constraintHorizontal_bias="0.20"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/buttonagregarnotas" />
 
         <Button
             android:id="@+id/buttonhabitos1"
-            android:layout_width="118dp"
+            android:layout_width="120dp"
             android:layout_height="52dp"
-            android:layout_marginBottom="140dp"
+            android:layout_marginTop="4dp"
             android:backgroundTint="#2F5596"
             android:text="@string/habitos"
+            android:textColor="#FFFFFF"
             android:textSize="15sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.153"
+            app:layout_constraintHorizontal_bias="0.20"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Habitos1"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/Habitos1" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
